auth controllers and templates

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    {% include "users/navbar.html" %}
+    {% include "blog/navbar.html" %}
     <div style="margin-top: 100px; margin-bottom: 100px" class="container">
       {% if messages %} {% for message in messages %} {% if message.tags == "error" %}
       <div class="alert alert-danger">{{ message }}</div>
