--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -13,11 +13,11 @@
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        {% comment %} {% url 'students' %} {% endcomment %}
-        <a class="nav-link" href="">Students</a>
+        {% comment %} {% url 'home' %} {% endcomment %}
+        <a class="nav-link" href="{% url 'home' %}">Home</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="">Contact</a>
+        <a class="nav-link" href="">About</a>
       </li>
     </ul>
 
@@ -33,17 +33,25 @@
         {% comment %} {% url 'logout' %} {% endcomment %}
         <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
       </li>
+      <li class="nav-item active">
+        {% comment %} {% url 'profile' %} {% endcomment %}
+        <a class="nav-link" href="">Profile</a>
+      </li>
+      <li class="nav-item active">
+        {% comment %} {% url 'newPost' %} {% endcomment %}
+        <a class="nav-link" href="">New Post</a>
+      </li>
       {% else %}
 
       <li class="nav-item active">
         {% comment %} {% url 'user_login' %} {% endcomment %}
-        <a class="nav-link" href="{% url 'user_login' %}">Log In</a>
+        <a class="nav-link" href="{% url 'login' %}">Log In</a>
       </li>
-      {% endif %}
       <li class="nav-item active">
         {% comment %} {% url 'register' %} {% endcomment %}
         <a class="nav-link" href=" {% url 'register' %}">Register</a>
       </li>
+      {% endif %}
     </ul>
   </div>
 </nav>
