--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,7 +18,7 @@
     <title>Document</title>
   </head>
 
-  <body>
+  <body style="background-color: #dadada">
     {% include "blog/navbar.html" %}
     <div style="margin-top: 100px; margin-bottom: 100px" class="container">
       {% if messages %} {% for message in messages %} {% if message.tags == "error" %}
