post create and post list

--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -38,8 +38,8 @@
         <a class="nav-link" href="{% url 'profile' %}">Profile</a>
       </li>
       <li class="nav-item active">
-        {% comment %} {% url 'newPost' %} {% endcomment %}
-        <a class="nav-link" href="">New Post</a>
+        {% comment %} {% url 'create' %} {% endcomment %}
+        <a class="nav-link" href="{% url 'create_post' %}">New Post</a>
       </li>
       {% else %}
 
