--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -8,9 +8,9 @@
     <div class="form-content" style="width: 300px; margin: auto">
       {% load crispy_forms_tags %}
       <form action="" method="post" enctype="multipart/form-data">
-        {% csrf_token %} {% comment %} {{ form.as_p }} {% endcomment %} {{ form | crispy}}
+        {% csrf_token %} {{ form | crispy}}
 
-        <button class="btn btn-dark" type="submit">Post</button>
+        <button class="btn btn-outline-dark" type="submit">Post</button>
       </form>
     </div>
   </div>
