--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,4 +1,4 @@
-{% extends 'blog/base.html' %} {% block content %} {% load static %} {% load humanize %} {% load bootstrap_icons %} {% load crispy_forms_tags %} {% if comment_form.errors %}
+{% extends 'blog/base.html' %} {% load humanize %} {% block content %} {% load static %} {% load bootstrap_icons %} {% load crispy_forms_tags %} {% if comment_form.errors %}
 <div class="alert alert-danger alert-dismissible" role="alert">
   <div id="form_errors">
     {% for key, value in comment_form.errors.items %}
@@ -25,18 +25,21 @@
     <hr />
     <div style="height: 3rem" class="card-body d-flex align-items-center justify-content-space-between row">
       <div class="col-sm-8 row">
-        <div class="col-sm-2">{% bs_icon 'chat-left' %} <span>2</span></div>
+        <div class="col-sm-2">{% bs_icon 'chat-left' %} <span>{{ comments_count }}</span></div>
         <div class="col-sm-2">{% bs_icon 'eye-fill' %} <span>51</span></div>
-        <div class="col-sm-2">{% bs_icon 'heart' %} <span>22</span></div>
+        <div class="col-sm-2">{% bs_icon 'heart' %} <span>{{ likes_count }}</span></div>
       </div>
       <div class="col-sm-4">
-        <div class="card-footer text-muted">{{ post.publish_date }}</div>
+        <div class="card-footer text-muted">{{ post.publish_date|naturaltime }}</div>
       </div>
     </div>
     <hr />
     <div class="card-body">
       <h5 class="card-title">Enjoy this post? Give it a LIKE!!</h5>
-      <a href="#" class="btn btn-light">{% bs_icon 'heart' color="red" %}</a>
+      <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %} {{ like_form }}
+        <button type="submit" class="btn btn-light">{% bs_icon 'heart' color="red" %}</button>
+      </form>
     </div>
 
     {% if user.is_authenticated %}
