--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,11 +10,17 @@
   </button>
 </div>
 {% endif %}
-<div class="card" style="padding: 1rem; width: 70%; margin: auto">
+<div class="card" style="padding: 1rem; max-width: 50rem; margin: auto">
   <div class="card-body">
     <dl class="row">
       <dt class="col-sm-4">
+        {% if post.image %}
+
         <img width="200rem" src="{{ post.image.url }}" />
+        {% else %}
+        <img width="200rem" src="{% static 'blog/images/default.png' %}" />
+
+        {% endif %}
       </dt>
 
       <dd class="col-sm-8 display-1 d-flex align-items-center">{{ post.title }}</dd>
@@ -23,14 +29,14 @@
     <br />
     <h5>{{ post.category }}</h5>
     <hr />
-    <div style="height: 3rem" class="card-body d-flex align-items-center justify-content-space-between row">
-      <div class="col-sm-8 row">
-        <div class="col-sm-2">{% bs_icon 'chat-left' %} <span>{{ comments_count }}</span></div>
-        <div class="col-sm-2">{% bs_icon 'eye-fill' %} <span>51</span></div>
-        <div class="col-sm-2">{% bs_icon 'heart' %} <span>{{ likes_count }}</span></div>
+    <div style="height: 3rem" class="card-body d-flex align-items-center justify-content-center row">
+      <div class="col-7 row">
+        <div class="col-4 row d-flex align-items-center row">{% bs_icon 'chat-left' %} <span>&nbsp;{{ comments_count }}</span></div>
+        <div class="col-4 row d-flex align-items-center row">{% bs_icon 'eye-fill' %} <span>&nbsp;51</span></div>
+        <div class="col-4 row d-flex align-items-center row">{% bs_icon 'heart' %} <span>&nbsp;{{ likes_count }}</span></div>
       </div>
-      <div class="col-sm-4">
-        <div class="card-footer text-muted">{{ post.publish_date|naturaltime }}</div>
+      <div class="col-5">
+        <div class="card-footer text-muted">{{ post.last_updated|naturaltime }}</div>
       </div>
     </div>
     <hr />
@@ -43,7 +49,6 @@
     </div>
 
     {% if user.is_authenticated %}
-
     <div class="form-content">
       <h5>Leave a comment below</h5>
       <form action="" method="post" enctype="multipart/form-data">
