--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -4,11 +4,7 @@
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="{% url 'home'  %}"
-    ><img src="{% static 'blog/images/cw_logo.png' %}" alt="CLARUSWAY_LOGO" style="width: 50px; height: 50px" />
-
-    Clarusway FS</a
-  >
+  <a class="navbar-brand" href="{% url 'home'  %}"><img src="{% static 'blog/images/cw_logo.png' %}" alt="CLARUSWAY_LOGO" style="width: 50px; height: 50px" /></a>
 
   <div class="collapse navbar-collapse" id="navbarCollapse">
     <ul class="navbar-nav mr-auto">
