--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %} {% load static %} {% load bootstrap_icons %} {% load humanize %} {% block content %}
 <center>
-  <h2 class="mb-3">Clarusway Blog</h2>
+  <h2 class="mb-3">Django Blog Page</h2>
 </center>
 
 <div class="row">
@@ -26,7 +26,7 @@
             <p style="height: 3rem" class="card-text">{{ post.content|truncatewords:10 }}</p>
           </div>
           <div style="height: 3rem" class="card-body d-flex align-items-center justify-content-center row">
-            <div class="col-4 row d-flex align-items-center">{% bs_icon 'chat-left' %} <span>&nbsp;9</span></div>
+            <div class="col-4 row d-flex align-items-center">{% bs_icon 'chat-left' %} <span>&nbsp;3</span></div>
             <div class="col-4 col-xs-4 row d-flex align-items-center">{% bs_icon 'eye-fill' %} <span>&nbsp;65</span></div>
             <div class="col-4 col-xs-4 row d-flex align-items-center">{% bs_icon 'heart' %} <span>&nbsp;21</span></div>
           </div>
