--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -63,7 +63,7 @@
 
       {% for comment in comments %}
       <div class="list-group">
-        <div class="list-group-item list-group-item-action" aria-current="true">
+        <div class="list-group-item list-group-item-action mb-1" aria-current="true">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{ comment.user.username }}</h5>
             <small>{{ comment.publish_date|naturaltime }}</small>
