some css corrections

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -23,7 +23,7 @@
         {% endif %}
 
         <div class="card-body">
-          <h5 class="card-title">{{ post.title|title }}</h5>
+          <h5 class="card-title mt-2">{{ post.title|title }}</h5>
           <p style="height: 3rem" class="card-text font-italic">{{ post.content|truncatewords:10 }}</p>
         </div>
         <div style="height: 3rem" class="card-body d-flex align-items-center justify-content-center row">
