--- a/blog/templates/blog/post_create.html
+++ b/blog/templates/blog/post_create.html
@@ -1,5 +1,5 @@
 {% extends 'blog/base.html' %} {% block content %}
-<div class="card" style="padding: 1rem">
+<div class="card" style="padding: 1rem; max-width: 30rem; margin: auto">
   <div class="card-body">
     <center>
       <h2>Blog Post</h2>
